--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,12 @@
 <h1>Books#index</h1>
 <p>Find me in app/views/books/index.html.erb</p>
 
-<h2>New book</h2>
+
+
+
+
+
+
+
+  <h2>New book</h2>
+</body>
