--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,9 @@
-login sign up
+<h1>welcome to <strong>Bookers</strong> !!</h1>
+
+<p>In Bookers,</p>
+<p>you can share and exchange your opinions ,inpressions ,and emotions</p>
+<p>about various books!</p>
+
+<p class="ml-3"><a class="btn btn-info" href="/users/sign_in">Log in</a></p>
+<p class="ml-3"><a class="btn btn-success" href="/users/sign_up">Sign Up</a></p>
+
