--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,46 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h2>User info</h2>
+  <%#= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", class:"rounded-circle"; %>, 
+  <table class="table">
+    <tboy>
+      <tr>
+        <th><%= attachment_image_tag book, :image, size: "63,x63", format: 'jpeg' %></th>  
+      </tr>
+      <tr>
+        <th>name</th>
+        <th></th>
+      </tr>
+      <tr>
+        <th>introduction</th>
+        <th></th>
+      </tr>
+    </tboy>  
+  </table>
 
+<h2>New book</h2>
+  <%= form_with model: @book, local:true do |f| %>
+    <div class="form-group">
+    <h4>Title</h4>
+    <%= f.text_field :title %>
+     </div>
+ 
+    <div class="form-group">
+    <h4>Opinion</h4>
+    <%= f.text_area :body %>
+     </div>
+       
+    <div class="form-group">
+    <%= f.submit 'Create Book' %>
+    </div>
+  <% end %>
 
-
-
-
-
-
-
-  <h2>New book</h2>
-</body>
+<h2>Books</h2>
+  <table class="table table-hover table-inverse">
+      <thead>
+        <tr>
+          <th></th>
+          <th>Title</th>
+          <th>Opinion</th>
+        </tr>  
+      </thead>
+      <tbody></tbody>
+  </table>
