--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div calss="container">  
-          <a class="navbar-brand p-3" href="/"><%#= image_tag('logo.png') %></a>
+          <a class="navbar-brand p-3" href="/"><span>Bookers</span><%#= image_tag('logo.png') %></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -21,25 +21,25 @@
             <% if user_signed_in? %>
               
               <li class="nav-item">
-                <%= link_to "Home", new_user_registration_path %>
+                <%= link_to "Home", new_user_registration_path, class: 'nav-link text-light' %>
               </li>
               <li class="nav-item">  
-                <%= link_to "About", new_user_registration_path %>
+                <%= link_to "About", new_user_registration_path, class: 'nav-link text-light' %>
               </li>
              
               <li class="nav-item">
-                <%= link_to "Users", new_user_registration_path %>
+                <%= link_to "Users", new_user_registration_path, class: 'nav-link text-light' %>
               </li>
             
               <li class="nav-item">
-                <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+                <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-light' %>
               </li>
             <% else %>
               <li class="nav-item">
-                <%= link_to "Sign up", new_user_registration_path %>
+                <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-light' %>
               </li>
               <li class="nav-item">
-                <%= link_to "Log in", new_user_session_path %>
+                <%= link_to "Log in", new_user_session_path, class: 'nav-link text-light' %>
               </li>
            
             <% end %>
