--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,7 @@
   <table class="table">
     <tboy>
       <tr>
-        <th><%= attachment_image_tag book, :image, size: "63,x63", format: 'jpeg' %></th>  
+        <th><%#= attachment_image_tag book, :image, size: "63,x63", format: 'jpeg' %></th>  
       </tr>
       <tr>
         <th>name</th>
@@ -13,20 +13,23 @@
         <th>introduction</th>
         <th></th>
       </tr>
+      <tr>
+        <th><%#= link_to "o", edit_user_path(@user) %></th>
+      </tr>
     </tboy>  
   </table>
 
 <h2>New book</h2>
   <%= form_with model: @book, local:true do |f| %>
     <div class="form-group">
-    <h4>Title</h4>
+    <p>Title</p>
     <%= f.text_field :title %>
      </div>
  
     <div class="form-group">
-    <h4>Opinion</h4>
-    <%= f.text_area :body %>
-     </div>
+      <p>Opinion</p>
+      <%= f.text_area :body %>
+    </div>
        
     <div class="form-group">
     <%= f.submit 'Create Book' %>
