--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,9 +1,19 @@
-<h1>welcome to <strong>Bookers</strong> !!</h1>
-
-<p>In <strong>Bookers</strong>,</p>
-<p>you can share and exchange your opinions ,inpressions ,and emotions</p>
-<p>about various books!</p>
-
-<p class="ml-3"><a class="btn btn-info" href="/users/sign_in">Log in</a></p>
-<p class="ml-3"><a class="btn btn-success" href="/users/sign_up">Sign Up</a></p>
-
+<div class="container">
+  <div class="row">        
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">  
+      <h1>welcome to <strong>Bookers</strong> !!</h1>
+      <p>In <strong>Bookers</strong>,</p>
+      <p>you can share and exchange your opinions ,inpressions ,and emotions</p>
+      <p>about various books!</p>
+      
+      <div class="btn-wrapper col-10 mx-auto">
+        <div class="row">
+          <p class="ml-3"><a class="btn btn-info" href="/users/sign_in">Log in</a></p>
+        </div>
+        <div class="row">
+          <p class="ml-3"><a class="btn btn-success" href="/users/sign_up">Sign Up</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
