--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,13 @@
     <%= yield %>
     
     <footer>
-      <p>CopyRight Infratop.inc</p>  
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto">
+          <p>CopyRight Infratop.inc</p>  
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
