--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Bookers2</title>
+    <script src="https://kit.fontawesome.com/427fa58aa1.js" crossorigin="anonymous"></script>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -21,25 +22,25 @@
             <% if user_signed_in? %>
               
               <li class="nav-item">
-                <%= link_to "Home", new_user_registration_path, class: 'nav-link text-light' %>
+                <i class="fas fa-home"></i><%= link_to "Home", new_user_registration_path, class: 'nav-link text-light' %>
               </li>
               <li class="nav-item">  
-                <%= link_to "About", new_user_registration_path, class: 'nav-link text-light' %>
+                <i class="fas fa-link"></i><%= link_to "About", new_user_registration_path, class: 'nav-link text-light' %>
               </li>
              
               <li class="nav-item">
-                <%= link_to "Users", new_user_registration_path, class: 'nav-link text-light' %>
+                <i class="fas fa-users"></i><%= link_to "Users", new_user_registration_path, class: 'nav-link text-light' %>
               </li>
             
               <li class="nav-item">
-                <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-light' %>
+                <i class="fas fa-sign-out-alt"></i><%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-light' %>
               </li>
             <% else %>
               <li class="nav-item">
-                <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-light' %>
+                <i class="fas fa-user-plus"<%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-light' %>
               </li>
               <li class="nav-item">
-                <%= link_to "Log in", new_user_session_path, class: 'nav-link text-light' %>
+                <i class="fas fa-sign-in-alt"></i><%= link_to "Log in", new_user_session_path, class: 'nav-link text-light' %>
               </li>
            
             <% end %>
