--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -8,10 +8,10 @@
       
       <div class="btn-wrapper col-10 mx-auto">
         <div class="row">
-          <p class="ml-3"><a class="btn btn-info" href="/users/sign_in">Log in</a></p>
+          <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
         </div>
         <div class="row">
-          <p class="ml-3"><a class="btn btn-success" href="/users/sign_up">Sign Up</a></p>
+          <%= link_to "Sign Up", user_session_path, class: "btn btn-success btn-sm btn-block sign_up" %>
         </div>
       </div>
     </div>
