--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,35 +12,47 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div calss="container">  
-          <a class="navbar-brand p-3" href="/"><span>Bookers</span><%#= image_tag('logo.png') %></a>
+        <div class="container">  
+          <a class="navbar-brand" href="/">
+            <span>Bookers</span>
+          </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
+  
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
-              
-              <li class="nav-item">
-                <i class="fas fa-home"></i><%= link_to "Home", new_user_registration_path, class: 'nav-link text-light' %>
+
+              <li>
+                <%= link_to "Home", new_user_registration_path, class: 'fas fa-home nav-link text-light' %>
               </li>
-              <li class="nav-item">  
-                <i class="fas fa-link"></i><%= link_to "About", new_user_registration_path, class: 'nav-link text-light' %>
-              </li>
-             
-              <li class="nav-item">
-                <i class="fas fa-users"></i><%= link_to "Users", new_user_registration_path, class: 'nav-link text-light' %>
+
+              <li>
+                <%= link_to "Users", new_user_registration_path, class: 'fas fa-users nav-link text-light' %>
               </li>
             
-              <li class="nav-item">
-                <i class="fas fa-sign-out-alt"></i><%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-light' %>
+              <li>
+                <%= link_to "Books", books_path, class: 'fas fa-book nav-link text-light' %>
+              </li>
+    
+              <li>
+                <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'fas fa-sign-out-alt nav-link text-light' %>
               </li>
             <% else %>
-              <li class="nav-item">
-                <i class="fas fa-user-plus"<%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-light' %>
+              <li>
+                <%= link_to "Home", new_user_registration_path, class: 'fas fa-home nav-link text-light' %>
               </li>
-              <li class="nav-item">
-                <i class="fas fa-sign-in-alt"></i><%= link_to "Log in", new_user_session_path, class: 'nav-link text-light' %>
+             
+             <li>  
+                <%= link_to "About", new_user_registration_path, class: 'fas fa-link nav-link text-light' %>
+              </li>
+             
+              <li>
+                <%= link_to "Sign up", new_user_registration_path, class: 'fas fa-sign-in-alt nav-link text-light' %>
+              </li>
+              <li>
+                <%= link_to "Log in", new_user_session_path, class: 'fas fa-sign-in-alt nav-link text-light' %>
               </li>
            
             <% end %>
