--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,50 +1,62 @@
-<h2>User info</h2>
-  <%#= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", class:"rounded-circle"; %>, 
-  <table class="table">
-    <tboy>
-      <%#= link_to post_image_path(post_image.id) do %>
-        <%#= attachment_image_tag post_image, :image %>
-      <%# end %>
-      <tr>
-        <th>投稿ユーザー画像：<%#= image_tag('sample-author1.jpg') %></th>
-      </tr>
-      <tr>
-        <th>name:<%= @user.name %> </th>  
-      </tr>  
-      <tr>
-        <th>introduction:<%#= @user.introduction %></th>
-      </tr>
-      <tr>
-        <th><%= link_to "Sign Up", user_session_path, class: "fas fa fa-user-cog @book" %></th>
-      </tr>
-    </tboy>  
-  </table>
-
-<h2>New book</h2>
-  <%= form_with model: @book, local:true do |f| %>
-    <div class="form-group">
-    <p>Title</p>
-    <%= f.text_field :title %>
-     </div>
- 
-    <div class="form-group">
-      <p>Opinion</p>
-      <%= f.text_area :body %>
-    </div>
+<div calss ="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">  
+        <h2>User info</h2>
+        <%#= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", class:"rounded-circle"; %> 
+        <table class="table">
+          <tbody>
+            <%#= link_to post_image_path(post_image.id) do %>
+              <%#= attachment_image_tag post_image, :image %>
+            <%# end %>
+            <tr>
+              <th>投稿ユーザー画像：<%#= image_tag('sample-author1.jpg') %></th>
+            </tr>
+            <tr>
+              <th>name:<%= @user.name %> </th>  
+            </tr>  
+            <tr>
+              <th>introduction:<%#= @user.introduction %></th>
+            </tr>
+            <tr>
+              <th><%#= link_to edit_user_path, class: "btn btn-outline-secondary btn-block" %>
+                    <i class="fas fa-user-cog"></i>
+                  <%# end %>
+              </th>
+            </tr>
+          </tbody>  
+        </table>
+      <div class="row">
+        
+      </div>  
+      <h2 class="mt-3">New book</h2>
+        <%= form_with model: @book, local:true do |f| %>
+          <div class="form-group">
+          <p>Title</p>
+          <%= f.text_field :title %>
+           </div>
        
-    <div class="form-group">
-    <%= f.submit 'Create Book' %>
+          <div class="form-group">
+            <p>Opinion</p>
+            <%= f.text_area :body %>
+          </div>
+             
+          <div class="form-group">
+          <%= f.submit 'Create Book', class: "btn btn-success data-disable-with" %>
+          </div>
+        <% end %>
+      </div>    
+  <div class="col-md-8 offset-md-1">
+        <h2>Books</h2>
+          <table class="table table-hover table-inverse">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Title</th>
+                <th>Opinion</th>
+              </tr>  
+            </thead>
+            <tbody></tbody>
+          </table>
+      </div>
     </div>
-  <% end %>
-
-<h2>Users</h2>
-  <table class="table table-hover table-inverse">
-      <thead>
-        <tr>
-          <th></th>
-          <th>Title</th>
-          <th>Opinion</th>
-        </tr>  
-      </thead>
-      <tbody></tbody>
-  </table>
+  </div>
