--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,51 +1,43 @@
-<div calss ="container px-5 px-sm-0">
-  <div class="row">
-    <div class="col-md-3">  
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
         <h2>User info</h2>
-        <%#= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", class:"rounded-circle"; %> 
         <table class="table">
           <tbody>
-            <%#= link_to post_image_path(post_image.id) do %>
-              <%#= attachment_image_tag post_image, :image %>
-            <%# end %>
             <tr>
-              <th>投稿ユーザー画像：<%#= image_tag('sample-author1.jpg') %></th>
+              <th><%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %></th>
             </tr>
             <tr>
-              <th>name:<%= @user.name %> </th>  
+              <th>name<%= @user.name %> </th>  
             </tr>  
             <tr>
-              <th>introduction:<%#= @user.introduction %></th>
-            </tr>
-            <tr>
-              <th><%#= link_to edit_user_path, class: "btn btn-outline-secondary btn-block" %>
-                    <i class="fas fa-user-cog"></i>
-                  <%# end %>
-              </th>
+              <th>introduction<%= @user.introduction %></th>
             </tr>
           </tbody>  
         </table>
-      <div class="row">
-        
-      </div>  
+            <div class="row">
+              <%#if @user.id == current_user.id %>
+                <%= link_to '',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
+              <%# end %>    
+            </div>
+     
       <h2 class="mt-3">New book</h2>
         <%= form_with model: @book, local:true do |f| %>
           <div class="form-group">
-          <p>Title</p>
-          <%= f.text_field :title %>
-           </div>
-       
+            <p>Title</p>
+            <%= f.text_field :title %>
+          </div>
           <div class="form-group">
             <p>Opinion</p>
             <%= f.text_area :body %>
           </div>
-             
           <div class="form-group">
-          <%= f.submit 'Create Book', class: "btn btn-success data-disable-with" %>
+            <%= f.submit 'Create Book', class: "btn btn-success data-disable-with" %>
           </div>
         <% end %>
       </div>    
-  <div class="col-md-8 offset-md-1">
+ 
+      <div class="col-md-8 offset-md-1">
         <h2>Books</h2>
           <table class="table table-hover table-inverse">
             <thead>
@@ -53,9 +45,18 @@
                 <th></th>
                 <th>Title</th>
                 <th>Opinion</th>
-              </tr>  
+                <th colspan="3"></th>
+              </tr>
             </thead>
-            <tbody></tbody>
+          <% @books.each do |book| %>
+            <tbody>
+              <tr>
+                <td><%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %></td>
+                <td><%= book.title %></td>
+                <td><%= book.body %></td>
+              </tr>  
+            </tbody>
+          <% end %>  
           </table>
       </div>
     </div>
