--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,20 +1,26 @@
-<h2>User info</h2>
-<%= form_with model: @book, local:true do |f| %>
-    <div class="form-group">
-      <p>Name</p>
-      <%= f.text_field :Name %>
-     </div>
- 
-    <div class="form-group">
-      <p>Image</p>
+<div calss ="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto"> 
+      <h2>User info</h2>
+      <%= form_with model: @user, local:true do |f| %>
+          <div class="form-group">
+            <p>Name</p>
+            <%= f.text_field :name, class:"form-control" %>
+          </div>
+          <div class="form-group">
+            <p>Image</p>
+            <%= f.attachment_field :image %>
+          </div>
+          
+          <div class="form-group">
+            <p>Introduction</p>
+            <%= f.text_area :introduction, class:"form-control" %>
+          </div>
+             
+          <div class="form-group">
+            <%= f.submit 'Update User', class:"btn btn-secondary" %>
+          </div>
+        <% end %>
     </div>
-    
-    <div class="form-group">
-      <p>Introduction</p>
-      <%= f.text_area :body %>
-    </div>  
-       
-    <div class="form-group">
-      <%= f.submit 'Update User' %>
-    </div>
-  <% end %>
+  </div>
+</div>  
