--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,22 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<div calss ="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto"> 
+      <h1>Editing Book</h1>
+      <%= form_with model: @user, local:true do |f| %>
+          <div class="form-group">
+            <p>Title</p>
+            <%= f.text_field :title %>
+          </div>
+          <div class="form-group">
+            <p>Opinion</p>
+            <%= f.text_area :body %>
+          </div>
+          <div class="form-group">
+            <%= f.submit 'Update Book', class:"btn btn-success" %>
+          </div>
+        <% end %>
+    <%= link_to "Show",book_path %> | <%= link_to"Back",books_path %>
+    
+    /div>
+  </div>
+</div>
