--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,9 +16,7 @@
           </tbody>  
         </table>
             <div class="row">
-              <%#if @user.id == current_user.id %>
-                <%= link_to '',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
-              <%# end %>    
+              <%= link_to '',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
             </div>
      
       <h2 class="mt-3">New book</h2>
@@ -51,8 +49,12 @@
           <% @books.each do |book| %>
             <tbody>
               <tr>
-                <td><%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %></td>
-                <td><%= book.title %></td>
+                <td><%#= link_to attachment_image_tag book.user, user_path(user), :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
+                <%= link_to user_path(@user) do %>
+                <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
+                <% end %>
+                </td>
+                <td><%= link_to book.title, book_path(@user) %></td>
                 <td><%= book.body %></td>
               </tr>  
             </tbody>
