--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,7 +9,7 @@
           </div>
           <div class="form-group">
             <p>Image</p>
-            <%= f.attachment_field :image %>
+            <%= f.attachment_field :profile_image %>
           </div>
           
           <div class="form-group">
