--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,65 @@
-user.index
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+        <h2>User info</h2>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th><%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %></th>
+            </tr>
+            <tr>
+              <th>name<%= @user.name %> </th>  
+            </tr>  
+            <tr>
+              <th>introduction<%= @user.introduction %></th>
+            </tr>
+          </tbody>  
+        </table>
+            <div class="row">
+                <%= link_to '',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>        
+            </div>
+     
+      <h2 class="mt-3">New book</h2>
+        <%= form_with model: @book, local:true do |f| %>
+          <div class="form-group">
+            <p>Title</p>
+            <%= f.text_field :title %>
+          </div>
+          <div class="form-group">
+            <p>Opinion</p>
+            <%= f.text_area :body %>
+          </div>
+          <div class="form-group">
+            <%= f.submit 'Create Book', class: "btn btn-success data-disable-with" %>
+          </div>
+        <% end %>
+      </div>    
+ 
+      <div class="col-md-8 offset-md-1">
+              <h2>Users</h2>
+          <table class="table table-hover table-inverse">
+            <thead>
+              <tr>
+                <th>image</th>
+                <th>name</th>
+                <th></th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
+          <% @users.each do |user| %>
+            <tbody>
+              <tr>
+               <td><%#= link_to attachment_image_tag book.user, user_path(user), :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
+                <%= link_to user_path(@user) do %>
+                <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
+                <% end %>
+                </td>
+                <td><%= @user.name %></td>
+                <td><%= link_to "Show", user_path(@user) %></td>
+              </tr>  
+            </tbody>
+          <% end %>  
+          </table>
+      </div>
+    </div>
+  </div>
