--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
         <table class="table">
           <tbody>
             <tr>
-              <th><%= attachment_image_tag @user, :image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %></th>
+              <th><%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %></th>
             </tr>
             <tr>
               <th>name<%= @user.name %> </th>  
@@ -16,9 +16,7 @@
           </tbody>  
         </table>
             <div class="row">
-              <%#if @user.id == current_user.id %>
-                <%= link_to '',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
-              <%# end %>    
+                <%= link_to '',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>        
             </div>
      
       <h2 class="mt-3">New book</h2>
