--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,14 +2,14 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto"> 
       <h1>Editing Book</h1>
-      <%= form_with model: @user, local:true do |f| %>
+      　<%= form_with model: @book, local:true do |f| %>
           <div class="form-group">
-            <p>Title</p>
-            <%= f.text_field :title %>
+            <label for="inputTitle">Title</label><br>
+            <%= f.text_field :title, autofocus: true, id:"inputTitle" %>
           </div>
           <div class="form-group">
-            <p>Opinion</p>
-            <%= f.text_area :body %>
+            <label for="inputOpinion">Opinion</label><br>
+            <%= f.text_area :body, autofocus: true,id:"inputOpimion" %>
           </div>
           <div class="form-group">
             <%= f.submit 'Update Book', class:"btn btn-success" %>
