--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -48,11 +48,12 @@
                 </td>
                 <td><%= link_to @book.title, book_path(@user) %></td>
                 <td><%= @book.body %></td>
-                <td><%= link_to "Edit", edit_book_path, class:"btn btn-sm btn-success" %></td>
-                <td><%= link_to "Destroy", class:"btn btn-sm btn-danger", method: :delete, "data-confirm" => "本当に削除しますか？"%></td>
+                <% if @user.id == current_user.id %>
+                  <td><%= link_to "Edit", edit_book_path, class:"btn btn-sm btn-success" %></td>
+                  <td><%= link_to "Destroy",book_path(@book), class:"btn btn-sm btn-danger", method: :delete, "data-confirm" => "本当に削除しますか？"%></td>
+               <% end %>              
               </tr>  
             </tbody>
-          
           </table>
       </div>
     </div>
