--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,16 +2,16 @@
   <div class='row'>
     <div class='col-md-3'>
         <h2>User info</h2>
-          <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
+          <%= attachment_image_tag @book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
         <table class="table">
           <tbody>
             <tr>
               <th>name</th>
-              <th><%= @user.name %> </th>  
+              <th><%= @book.user.name %> </th>  
             </tr>  
             <tr>
               <th>introduction</th>
-              <th><%= @user.introduction %></th>
+              <th><%= @book.user.introduction %></th>
             </tr>
           </tbody>  
         </table>
@@ -43,13 +43,13 @@
                 <td>
                 <%= link_to user_path(@user) do %>
                 <%= attachment_image_tag @book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
-                <br><%= @user.name %>
+                <br><%= @book.user.name %>
                 <% end %>
                 </td>
                 <td><%= link_to @book.title, book_path(@user) %></td>
                 <td><%= @book.body %></td>
-                <% if @user.id == current_user.id %>
-                  <td><%= link_to "Edit", edit_book_path, class:"btn btn-sm btn-success" %></td>
+                <% if @book.user == current_user %>
+                  <td><%= link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %></td>
                   <td><%= link_to "Destroy",book_path(@book), class:"btn btn-sm btn-danger", method: :delete, "data-confirm" => "本当に削除しますか？"%></td>
                <% end %>              
               </tr>  
