--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,15 +1,22 @@
 <div class='container px-5 px-sm-0'>
+  <div id ="error_explanation"> 
+  <% if @book.errors.any? %>
+  <%= @book.errors.count %>error prohibited this obj from being saved:
+  <% @book.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+  <% end %>
+  </div>
+
   <div class='row'>
     <div class='col-md-3'>
         <h2>User info</h2>
+        <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
         <table class="table">
-          <tbody>
-            <tr>
-              <th><%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %></th>
-            </tr>
+            <tbody>  
             <tr>
               <th>name</th>
-              </th><%= @user.name %> </th>  
+              <th><%= @user.name %></th>  
             </tr>  
             <tr>
               <th>introduction</th>
