--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
               <li>
-                <%= link_to "Home", new_user_registration_path, class: 'fas fa-home nav-link text-light' %>
+                <%#= link_to "Home", user_path, class: 'fas fa-home nav-link text-light' %>
               </li>
 
               <li>
@@ -35,15 +35,15 @@
               </li>
     
               <li>
-                <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'fas fa-sign-out-alt nav-link text-light' %>
+                <%= link_to "Log out", root_path, method: :delete, class: 'fas fa-sign-out-alt nav-link text-light' %>
               </li>
             <% else %>
               <li>
-                <%= link_to "Home", new_user_registration_path, class: 'fas fa-home nav-link text-light' %>
+                <%= link_to "Home", user_path, class: 'fas fa-home nav-link text-light' %>
               </li>
              
              <li>  
-                <%= link_to "About", new_user_registration_path, class: 'fas fa-link nav-link text-light' %>
+                <%= link_to "About", homes_path, class: 'fas fa-link nav-link text-light' %>
               </li>
              
               <li>
