--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -45,7 +45,7 @@
             <tbody>
               <tr>
                 <td>
-                <%= link_to user_path(@user) do %>
+                <%= link_to user_path(book) do %>
                 <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
                 <% end %>
                 </td>
