--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,7 +17,7 @@
                 <br><%= @book.user.name %>
                 <% end %>
                 </td>
-                <td><%= link_to @book.title, book_path(@user) %></td>
+                <td><%= link_to @book.title, book_path(@book) %></td>
                 <td><%= @book.body %></td>
                 <% if @book.user == current_user %>
                   <td><%= link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %></td>
