--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
                 <%= link_to "Users", users_path, class: 'fas fa-users nav-link text-light' %>
               </li>
               <li>
-                <%= link_to "Books", books_path, class: 'fas fa-book nav-link text-light' %>
+                <%= link_to "Books", books_path, class: 'fas fa-book-open nav-link text-light' %>
               </li>
               <li>
                 <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'fas fa-sign-out-alt nav-link text-light' %>
