--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -41,19 +41,19 @@
                 <th colspan="3"></th>
               </tr>
             </thead>
-          <% @books.each do |book| %>
             <tbody>
+             <% @books.each do |book| %>
               <tr>
                 <td>
-                <%= link_to user_path(book) do %>
+                <%= link_to user_path(book.user) do %>
                 <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "63x63" %>
                 <% end %>
                 </td>
                 <td><%= link_to book.title, book_path(book) %></td>
                 <td><%= book.body %></td>
-              </tr>  
+              </tr> 
+             <% end %>
             </tbody>
-          <% end %>  
           </table>
       </div>
     </div>
